# comfyui-reactor-node

./: .gitignore  README.md  README_RU.md  __init__.py  console_log_patch.py  install.bat  install.py  launch.py  nodes.py  pyproject.toml  reactor_log_patch.py  reactor_patcher.py  reactor_utils.py  requirements.txt  utils.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish_action.yml
facelib/detection/: __init__.py
facelib/parsing/: __init__.py
modules/: face_restoration.py  processing.py  scripts.py  shared.py  upscaler.py
r_basicsr/archs/: arch_util.py
r_facelib/detection/retinaface/: retinaface.py
r_facelib/detection/yolov5face/: face_detector.py
r_facelib/utils/: face_restoration_helper.py  misc.py
scripts/: __init__.py  faceswap.py  logger.py  reactor_facerestore.py  reactor_faceswap.py  reactor_logger.py  reactor_swapper.py  reactor_version.py  swapper.py  version.py
scripts/r_archs/: codeformer_arch.py  vqgan_arch.py
scripts/r_faceboost/: restorer.py
scripts/r_masking/: core.py
uploads/: insightface-0.7.3-cp310-cp310-win_amd64.whl
